--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abiem Trans - Agen Travel Modern & Menyenangkan</title>
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Ccircle fill='%2300A389' cx='32' cy='32' r='32'/%3E%3Cpath d='M50 42H14c-1.1 0-2-.9-2-2v-8c0-4.42 3.58-8 8-8h20c4.42 0 8 3.58 8 8v8c0 1.1-.9 2-2 2z' fill='%23FFF'/%3E%3Cpath d='M44 24h-24c-2.21 0-4-1.79-4-4v-2c0-2.21 1.79-4 4-4h24c2.21 0 4 1.79 4 4v2c0 2.21-1.79 4-4 4z' fill='%23D1FAE5'/%3E%3Crect fill='%23FFF' x='18' y='16' width='28' height='8' rx='2'/%3E%3Ccircle fill='%231F2937' cx='20' cy='42' r='6'/%3E%3Ccircle fill='%23FFF' cx='20' cy='42' r='2'/%3E%3Ccircle fill='%231F2937' cx='44' cy='42' r='6'/%3E%3Ccircle fill='%23FFF' cx='44' cy='42' r='2'/%3E%3C/g%3E%3C/svg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
