--- a/index.html
+++ b/index.html
@@ -538,9 +538,11 @@
                                 Punya pertanyaan atau sudah siap memesan tiket petualanganmu? Tim kami siap sedia membantu. Cukup klik tombol di bawah ini!
                             </p>
                             <div class="mt-8 flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
-                                <a href="https://wa.me/62882001753186" target="_blank" class="w-full sm:w-auto bg-green-500 text-white font-bold px-6 py-3 rounded-full text-lg shadow-lg hover:bg-green-600 transform hover:scale-105 transition duration-300 flex items-center justify-center">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" viewBox="0 0 24 24" fill="currentColor"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.894 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.886-.001 2.269.655 4.505 1.905 6.344l-1.196 4.354 4.463-1.164z"/></svg>
-                                    Chat di WhatsApp
+                                <a href="https://wa.link/w0jfqg" target="_blank" class="w-full sm:w-auto bg-green-500 text-white font-bold px-6 py-3 rounded-full text-lg shadow-lg hover:bg-green-600 transform hover:scale-105 transition duration-300 flex items-center justify-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" fill="currentColor" viewBox="0 0 16 16">
+                                 <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+                                  </svg>
+                                 Chat di WhatsApp
                                 </a>
                                 <a href="mailto:abiemnie63@gmail.com" class="w-full sm:w-auto bg-gray-800 text-white font-bold px-6 py-3 rounded-full text-lg shadow-lg hover:bg-gray-900 transform hover:scale-105 transition duration-300 flex items-center justify-center">
                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" viewBox="0 0 20 20" fill="currentColor">
@@ -643,6 +645,9 @@
                     <ul class="space-y-2 text-gray-400">
                         <li><span class="font-semibold text-white">Email:</span> abiemnie63@gmail.com</li>
                         <li><span class="font-semibold text-white">Telepon/WA:</span> 0882001753186</li>
+                        <li class="flex items-start">
+                            <span class="font-semibold text-white mr-2 shrink-0">Alamat:</span>
+                            <span>Dusun Pangadangan, RT 12/05, Desa Rancasari, Kec. Pamanukan, Kab. Subang</span>
                     </ul>
                 </div>
             </div>
