--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta property="og:url" content="https://travelabiemtrans.netlify.app/">
     <meta property="og:title" content="Abiem Trans - Agen Travel Modern & Menyenangkan">
     <meta property="og:description" content="Perjalanan seru dan bebas ribet bersama Abiem Trans. Kami menyediakan layanan travel, carter, pariwisata, dan tour dengan armada nyaman dan driver profesional.">
-    <meta property="og:image" content="https://static.vecteezy.com/system/resources/previews/013/389/491/non_2x/road-trip-by-car-at-summer-vacation-holidays-free-vector.jpg">
+    <meta property="og:image" content="https://www.asuransiku.id/support/images/upload-photos/article/artikel3-bisnis-travel-besar.png?w=650">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://travelabiemtrans.netlify.app/">
     <meta property="twitter:title" content="Abiem Trans - Agen Travel Modern & Menyenangkan">
     <meta property="twitter:description" content="Perjalanan seru dan bebas ribet bersama Abiem Trans. Kami menyediakan layanan travel, carter, pariwisata, dan tour dengan armada nyaman dan driver profesional.">
-    <meta property="twitter:image" content="https://static.vecteezy.com/system/resources/previews/013/389/491/non_2x/road-trip-by-car-at-summer-vacation-holidays-free-vector.jpg">
+    <meta property="twitter:image" content="https://www.asuransiku.id/support/images/upload-photos/article/artikel3-bisnis-travel-besar.png?w=650">
 
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Ccircle fill='%239333EA' cx='32' cy='32' r='32'/%3E%3Cpath d='M50 42H14c-1.1 0-2-.9-2-2v-8c0-4.42 3.58-8 8-8h20c4.42 0 8 3.58 8 8v8c0 1.1-.9 2-2 2z' fill='%23FFF'/%3E%3Cpath d='M44 24h-24c-2.21 0-4-1.79-4-4v-2c0-2.21 1.79-4 4-4h24c2.21 0 4 1.79 4 4v2c0 2.21-1.79 4-4 4z' fill='%23E9D5FF'/%3E%3Crect fill='%23FFF' x='18' y='16' width='28' height='8' rx='2'/%3E%3Ccircle fill='%231F2937' cx='20' cy='42' r='6'/%3E%3Ccircle fill='%23FFF' cx='20' cy='42' r='2'/%3E%3Ccircle fill='%231F2937' cx='44' cy='42' r='6'/%3E%3Ccircle fill='%23FFF' cx='44' cy='42' r='2'/%3E%3C/g%3E%3C/svg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
