--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        html{
+            scroll-behavior: smooth;
         body {
             font-family: 'Poppins', sans-serif;
         }
@@ -1012,4 +1014,5 @@
 
 </body>
 </html>
+
 
