--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                             <button onclick="getTripIdeas('Bandara Soekarno-Hatta')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.link/w0jfqg" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Bandara%20Soekarno-Hatta" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -426,7 +426,7 @@
                             <button onclick="getTripIdeas('Jakarta')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.link/w0jfqg" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Jakarta" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -440,7 +440,7 @@
                             <button onclick="getTripIdeas('Tangerang')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.link/w0jfqg" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Tangerang" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -454,7 +454,7 @@
                             <button onclick="getTripIdeas('Depok')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.link/w0jfqg" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Depok" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -468,7 +468,7 @@
                             <button onclick="getTripIdeas('Bogor')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.link/w0jfqg" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Bogor" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -482,7 +482,7 @@
                             <button onclick="getTripIdeas('Karawang')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.link/w0jfqg" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Karawang" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -496,7 +496,7 @@
                             <button onclick="getTripIdeas('Cikarang')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.link/w0jfqg" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Cikarang" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -510,7 +510,7 @@
                             <button onclick="getTripIdeas('Cakung')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.link/w0jfqg" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Cakung" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -524,7 +524,7 @@
                             <button onclick="getTripIdeas('Bekasi')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.link/w0jfqg" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Bekasi" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -538,7 +538,7 @@
                             <button onclick="getTripIdeas('Pulogadung')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.me/62882001753186" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Pulogadung" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -552,7 +552,7 @@
                             <button onclick="getTripIdeas('Tanjung Priok')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.me/62882001753186" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Tanjung%20Priok" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -566,7 +566,7 @@
                             <button onclick="getTripIdeas('Muara Angke')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.me/62882001753186" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Muara%20Angke" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
@@ -580,7 +580,7 @@
                             <button onclick="getTripIdeas('Serang')" class="bg-purple-100 text-purple-700 text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-purple-200">
                                 ✨ Dapatkan Ide
                             </button>
-                            <a href="https://wa.me/62882001753186" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
+                            <a href="https://wa.me/62882001753186?text=Halo%20Abiem%20Trans,%20saya%20tertarik%20untuk%20memesan%20perjalanan%20ke%20Serang" target="_blank" class="bg-pink-500 text-white text-xs font-bold px-4 py-2 rounded-full transition-all duration-300 hover:bg-pink-600">
                                 Pesan
                             </a>
                         </div>
