--- a/index.html
+++ b/index.html
@@ -393,7 +393,6 @@
         </section>
         
         <!-- Rute Section -->
-                 <!-- Rute Section -->
         <section id="rute" class="py-20 bg-gray-50">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
@@ -599,7 +598,7 @@
                             </a>
                         </div>
                     </div>
-                   <!-- Special CTA Card -->
+                    <!-- Special CTA Card -->
                     <a href="#kontak" class="scroll-animate group bg-amber-400 p-4 rounded-2xl shadow-sm flex flex-col items-center justify-center text-center text-gray-800 transition-all duration-300 ease-in-out hover:shadow-lg hover:scale-105">
                         <div class="mb-2">
                              <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -628,10 +627,10 @@
                             </p>
                             <div class="mt-8 flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
                                 <a href="https://wa.link/w0jfqg" target="_blank" class="w-full sm:w-auto bg-green-500 text-white font-bold px-6 py-3 rounded-full text-lg shadow-lg hover:bg-green-600 transform hover:scale-105 transition duration-300 flex items-center justify-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" fill="currentColor" viewBox="0 0 16 16">
-                                 <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
-                                  </svg>
-                                 Chat di WhatsApp
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" fill="currentColor" viewBox="0 0 16 16">
+                                       <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+                                     </svg>
+                                    Chat di WhatsApp
                                 </a>
                                 <a href="mailto:abiemnie63@gmail.com" class="w-full sm:w-auto bg-gray-800 text-white font-bold px-6 py-3 rounded-full text-lg shadow-lg hover:bg-gray-900 transform hover:scale-105 transition duration-300 flex items-center justify-center">
                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" viewBox="0 0 20 20" fill="currentColor">
@@ -737,10 +736,18 @@
                         <li class="flex items-start">
                             <span class="font-semibold text-white mr-2 shrink-0">Alamat:</span>
                             <span>Dusun Pangadangan, RT 12/05, Desa Rancasari, Kec. Pamanukan, Kab. Subang</span>
+                        </li>
                     </ul>
                 </div>
             </div>
             <div class="mt-12 border-t border-gray-700 pt-8 text-center text-gray-500">
+                 <div class="flex justify-center space-x-6 mb-4">
+                    <!-- TikTok -->
+                    <a href="https://www.tiktok.com/@abiem.trans?_t=ZS-8zRM8j2Bbt7&_r=1"target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition" aria-label="TikTok">
+                        <img src="https://static.vecteezy.com/system/resources/previews/023/986/921/original/tiktok-logo-tiktok-logo-transparent-tiktok-icon-transparent-free-free-png.png" class="w-8 h-8" alt="TikTok">
+                    </a>
+                     <!-- You can add other social icons here -->
+                </div>
                 <p>&copy; 2024 Abiem Trans. Dibuat dengan ☕ dan secuil kode ajaib.</p>
             </div>
         </div>
@@ -945,7 +952,7 @@
 
         async function callGemini(prompt) {
             const encodedApiKey = "QUl6YVN5QUVYeFFiZW1iQnlPNzRWUWViN0NHb3FWTlBubzhuNDd3";
-                const apiKey = atob(encodedApiKey);
+            const apiKey = atob(encodedApiKey);
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
             const payload = {
@@ -969,23 +976,30 @@
                 if (candidate && candidate.content?.parts?.[0]?.text) {
                     let text = candidate.content.parts[0].text;
                     
-                    // Improved Markdown to HTML conversion
+                    // Improved Markdown to HTML conversion to handle paragraphs and lists
+                    text = text.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>'); // Bold
                     const lines = text.split('\n').filter(line => line.trim() !== '');
-                    let html = '<ul>';
+                    let isList = false;
+                    let html = '';
                     lines.forEach(line => {
-                        if (line.trim().startsWith('*')) {
-                            let content = line.trim().substring(1).trim(); // Remove '*'
-                            content = content.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
-                            html += `<li>${content}</li>`;
-                        } else {
-                             // If a line doesn't start with *, treat it as part of the previous li or a new p
-                            if (html.endsWith('</li>')) {
-                                html = html.slice(0, -5); // remove </li>
-                                html += ` ${line}</li>`
+                        const trimmedLine = line.trim();
+                        if (trimmedLine.startsWith('* ')) {
+                            if (!isList) {
+                                html += '<ul>';
+                                isList = true;
                             }
+                            html += `<li>${trimmedLine.substring(2)}</li>`; // Remove '* '
+                        } else {
+                            if (isList) {
+                                html += '</ul>';
+                                isList = false;
+                            }
+                            html += `<p>${trimmedLine}</p>`;
                         }
                     });
-                    html += '</ul>';
+                    if (isList) {
+                        html += '</ul>';
+                    }
                     return html;
 
                 } else {
